# agenterra

./: .gitignore  .windsurfrules  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  ROADMAP.md  SECURITY.md  release-plz.toml  release.toml  rustfmt.toml  test_template_debug.rs
.github/: CODEOWNERS  branch_protection.json  commit_message_template.md  copilot-instructions.md  protection-main.json  protection-release-plz.json  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  devops.md  documentation.md  feature_request.md  performance.md  refactoring.md  style.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: ci.yml  release-pr.yml  release.yml
crates/agenterra-cli/: CHANGELOG.md  Cargo.toml
crates/agenterra-cli/src/: main.rs
crates/agenterra-cli/tests/: integration_test.rs
crates/agenterra-cli/tests/test_utils/: mod.rs
crates/agenterra-core/: CHANGELOG.md  Cargo.toml
crates/agenterra-core/src/: config.rs  error.rs  generate.rs  har.rs  lib.rs  manifest.rs  openapi.rs
crates/agenterra-core/src/builders/: mod.rs  rust.rs
crates/agenterra-core/src/templates/: dir.rs  kind.rs  manager.rs  options.rs
crates/mcpgen-cli/: Cargo.toml
crates/mcpgen-cli/src/: main.rs
crates/mcpgen-cli/tests/: integration_test.rs
crates/mcpgen-cli/tests/test_utils/: mod.rs
crates/mcpgen-core/: Cargo.toml
crates/mcpgen-core/src/: config.rs  error.rs  generate.rs  lib.rs  manifest.rs  openapi.rs  template.rs  template_manager.rs  template_options.rs  utils.rs
crates/mcpgen-core/src/builders/: mod.rs  rust.rs
crates/mcpgen-core/src/generator/: mod.rs
crates/mcpgen-core/src/openapi/: mod.rs  types.rs
crates/mcpgen-core/src/openapi/parser/: mod.rs  parameter.rs  property.rs  schema.rs
crates/mcpgen-core/src/openapi/schema/: mod.rs  types.rs  value.rs
crates/mcpgen-core/src/template/: mod.rs
crates/mcpgen-core/src/templates/: dir.rs  kind.rs  manager.rs  mod.rs  types.rs
crates/mcpgen-core/templates/: handler.rs.tera  handlers_mod.rs.tera
docs/: AGENT_INSTRUCTIONS.md  CLI_REFERENCE.md  CONFIGURATION.md  TEMPLATES.md  UX_IMPROVEMENTS.md  chatgpt-discusion.md
scripts/: release.sh
templates/rust-axum/: Cargo.toml.tera  common.rs.tera  config.rs.tera  handler.rs.tera  handlers_mod.rs.tera  main.rs.tera  manifest.yaml
templates/rust_axum/: Cargo.toml.tera  common.rs.tera  config.rs.tera  handler.rs.tera  handlers_mod.rs.tera  main.rs.tera  manifest.yaml  server.rs.tera  signal.rs.tera
tests/fixtures/: README.md  update_petstore_fixtures.sh
tests/fixtures/har/: sample.har
tests/fixtures/openapi/: .gitignore
