[package]
name = "agenterra"
version = "0.1.0"
edition = "2024"
description = "CLI for generating MCP servers from OpenAPI specs with Agenterra"
license = "MIT OR Apache-2.0"

[dependencies]
agenterra-core = { path = "../agenterra-core" }
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3.0", features = ["env-filter"] }
anyhow = "1.0"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
reqwest = { version = "0.11", features = ["json"] }
tempfile = "3.10"

[[bin]]
name = "agenterra"
path = "src/main.rs"

[[bin]]
name = "agnt"
path = "src/main.rs"

[dev-dependencies]
lazy_static = "1.4.0"
