[package]
name = "mcpgen"
version = "0.1.0"
edition = "2021"
description = "CLI for generating MCP servers from OpenAPI specs"
license = "MIT OR Apache-2.0"

[dependencies]
mcpgen-core = { path = "../mcpgen-core" }
clap = { version = "4.4", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
