[package]
name = "mcpgen-core"
version = "0.1.0"
edition = "2021"
description = "Core library for generating MCP servers from OpenAPI specs"
license = "MIT OR Apache-2.0"

[dependencies]
openapiv3 = "2.1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
thiserror = "1.0"
log = "0.4"
regex = "1.9"
url = "2.4"
anyhow = "1.0"
tokio = { version = "1.0", features = ["fs", "io-util", "rt", "macros"] }
tera = "1.19"

[dev-dependencies]
tempfile = "3.3"
