[package]
name = "mcpgen-core"
version = "0.1.0"
edition = "2024"
description = "Core library for generating MCP servers from OpenAPI specs"
license = "MIT"

[dependencies]
anyhow = "1.0"
clap = { version = "4.4", features = ["derive"] }
dirs = "5.0"
futures = "0.3"
log = "0.4"
once_cell = "1.19"
openapiv3 = "2.1.0"
regex = "1.9"
reqwest = { version = "0.11", features = ["json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-value = "0.7"
serde_yaml = "0.9"
tera = "1.19"
thiserror = "1.0"
tokio = { version = "1.0", features = [
    "fs",
    "io-util",
    "rt-multi-thread",
    "macros",
    "process",
] }
toml = "0.8"
url = { version = "2.4", features = ["serde"] }

[dev-dependencies]
tempfile = "3.3"
